fixed chart text alignment

--- a/_sass/3-layout/employee.scss
+++ b/_sass/3-layout/employee.scss
@@ -154,7 +154,7 @@
     font-size: 1.2rem;
   }
   @include respond(sm-phone) {
-    bottom: 5rem; right: 6rem;
+    bottom: 10.55rem; right: 0;
   }
 }
 
